Fix IE11 summary label width on mobiles

--- a/sass/blocks/_boss-weather.sass
+++ b/sass/blocks/_boss-weather.sass
@@ -125,6 +125,10 @@ $block: ".boss-weather"
       flex-shrink: 1
       width: auto
 
+    @media screen and (max-width: 640px)
+      flex-grow: 1
+      width: 100%
+
 
   // $Weather summary title
   &__summary-title
